dist/1.0/bin/sample/retrieveUnpackaged/objects/SFDC_Calculation__c.object
<CustomObject>
    <description>or purposes of business case approval there is a need for clear distinguishing of each costing option of evaluated solution. Therefore a new object is designed in Colorado environment. The current name is “calculation”. The main purpose of this new object is:

    * Link order lines across different orders, representing (and record) one concrete option from technical and costing point of view;
    * Collect costing items, related to the particular solution. The costing items should list all items, needed for solution delivery.</description>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCT_Calculation__c</fullName>
        <formula>IF(OR( ISPICKVAL(Evaluation_Type__c,&apos;BCT&apos;),ISPICKVAL(Evaluation_Type__c,&apos;BCT+Price List&apos;) ),
IF (OR(ISBLANK( Calculation_Number__c ) ,ISNULL(Calculation_Number__c)) ,&apos;Calculation has not been sent yet&apos;,HYPERLINK(&quot;http://piaskownica.energis.poland:7070/restricted/showCalculationFamily&quot; &amp; &quot;-&quot; &amp;  Opportunity__r.Opportunity_No__c,Calculation_Number__c)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BCT Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Country__c</fullName>
        <description>Indicates country, that should be used for Calculation creation in BCT</description>
        <inlineHelpText>Indicates country, that should be used for Calculation creation in BCT</inlineHelpText>
        <label>Calculation Country</label>
        <picklist>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculation_Level__c</fullName>
        <label>Calculation LoA</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculation_Number__c</fullName>
        <label>Calculation Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Status__c</fullName>
        <label>Calculation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted for realization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved financial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved financial terms by CE Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved financial terms by CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary - approved financial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary - Approved financial terms by CE Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary - Approved financial terms by CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated on LoA5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated on LoA6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In verification of accordance with contract terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In verification of client type (RT/WH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In verification of financial terms (LoA2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In verification of financial terms (LoA3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In verification of financial terms (LoA4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected (LoA2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected (LoA3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected (LoA4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected (LoA5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected (LoA6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected OE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <description>Indicates what type of caluclation was used for this Deal</description>
        <inlineHelpText>Indicates what type of caluclation was used for this Deal</inlineHelpText>
        <label>Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>BCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculation_Version__c</fullName>
        <label>Calculation Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Type__c</fullName>
        <label>Evaluation Type</label>
        <picklist>
            <picklistValues>
                <fullName>BCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCT+Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel Calculation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Gross Margin value for gived Calculation returned from BCT</description>
        <inlineHelpText>Gross Margin value for gived Calculation returned from BCT</inlineHelpText>
        <label>Gross Margin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Calculation_Reason__c</fullName>
        <description>Information why Manual Calculation type has been selected</description>
        <inlineHelpText>Information why Manual Calculation type has been selected</inlineHelpText>
        <label>Manual Calculation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Different contract lenghts on Order Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>One_time_price__c</fullName>
        <label>One-time price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Location__c</fullName>
        <formula>TEXT(Opportunity__r.GTS_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SFDC Calculations</relationshipLabel>
        <relationshipName>SFDC_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payback__c</fullName>
        <description>Payback for configured Deal returned from BCT</description>
        <inlineHelpText>Payback for configured Deal returned from BCT</inlineHelpText>
        <label>Payback</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Calculation_Number__c</fullName>
        <description>Number of Calculation being modified by this Calculation</description>
        <inlineHelpText>Number of Calculation being modified by this Calculation</inlineHelpText>
        <label>Previous Calculation Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profitability_Ratio__c</fullName>
        <description>Value returned by BCT; Used to calculate Sales comission</description>
        <inlineHelpText>Value returned by BCT; Used to calculate Sales comission</inlineHelpText>
        <label>Profitability Ratio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_cost__c</fullName>
        <description>Relation to Project Cost used to create this Calculation</description>
        <inlineHelpText>Relation to Project Cost used to create this Calculation</inlineHelpText>
        <label>Project cost</label>
        <referenceTo>Project_cost__c</referenceTo>
        <relationshipLabel>SFDC Calculations</relationshipLabel>
        <relationshipName>SFDC_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ready_for_submitting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for calculating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Nonstandard_Process__c</fullName>
        <description>Obligatory when calculation type is Excel or Manual</description>
        <inlineHelpText>Obligatory when calculation type is Excel or Manual</inlineHelpText>
        <label>Reason for Nonstandard Process</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recurring_price__c</fullName>
        <label>Recurring price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <description>Reason of Calculation Rejection</description>
        <inlineHelpText>Reason of Calculation Rejection</inlineHelpText>
        <label>Rejection Reason</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Calculation__c</fullName>
        <description>Relation to Calculation, from which this one has been created</description>
        <inlineHelpText>Relation to Calculation, from which this one has been created</inlineHelpText>
        <label>SFDC Calculation</label>
        <referenceTo>SFDC_Calculation__c</referenceTo>
        <relationshipLabel>SFDC Calculations</relationshipLabel>
        <relationshipName>SFDC_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Budgetary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SFDC Calculation</label>
    <nameField>
        <displayFormat>CAL-{0000000000}</displayFormat>
        <label>SFDC Calculation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Calculations</pluralLabel>
    <recordTypes>
        <fullName>Domestic</fullName>
        <active>true</active>
        <description>Record Type for calculations related to Domestic sales</description>
        <label>Domestic</label>
    </recordTypes>
    <recordTypes>
        <fullName>International_Sales</fullName>
        <active>true</active>
        <description>Calculations for IS Business Unit</description>
        <label>International Sales</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_unckeck</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(Ready_for_submitting__c) &amp;&amp; PRIORVALUE(Ready_for_submitting__c)</errorConditionFormula>
        <errorDisplayField>Ready_for_submitting__c</errorDisplayField>
        <errorMessage>Calculation was already mark as ready for submitting, AM was notified. Calculation can not be unchecked.</errorMessage>
    </validationRules>
</CustomObject>